# cloud_radar_ml_project

./: .gitignore  README.md  config.py  pyproject.toml  run_create_sample.sh
figures/: __init__.py  doppler_spectra.py  vars_time_height.py
process/: __init__.py  create_sample.py  upload_to_bucket.py
readers/: __init__.py  cloud_radar_lampedusa.py  data_buckets_funcs.py
utils/: __init__.py  data_info.py  func.py
